# nitro

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: general.yml
migrations/: 20221018215312_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
